Fri Sep 19 20:23:46 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* boarddim.h - reverse cube locations, gtkgame.c - micro-typo
	  in dice drawing area
	
Fri Sep 19 19:53:02 GMT 2003  Jim Segrave <jes@jes-2.demon.nl>

	* Makefile.am, Makefile.in - add timer.c to sources

Fri Sep 19 20:59:43 2003  Joern Thyssen  <jth@gnubg.org>

	* eval.c (getPercent): fix bugs for "strange" match play
	scenarios (see 2-ply and 3-ply eval on cAmgACAAGAAA/4HPkAUgzW8EBMA)
	(reported by Ege Lundgren)	

Fri Sep 19 09:34:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c: Add tab-completion to the command dialog

Thu Sep 19 22:06:27 2003 GMT  Jim Segrave <jes@jes-2.demon.nl>

	* first cut at paramaterising board. It now appears to be possible
	  to alter the aspect ratio (adding space in the middle). A 72x108
	  board is buildable, but should not be used (there's no guarantee
	  that the dice or doubling cube can be placed on the board
	  without intersecting chequers, although changing the die and 
	  doubling cube size will fix that)


Wed Sep 17 11:42:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* timercontrol.c: Changed timing function for win32
	moved timer.c to main direcory

Tue Sep 16 17:42:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgame.c: Add dynamic help to enter command.


Mon Sep 15 12:55:45 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	* gtkboard.c, render.c: fix an oversight of my last commit

Mon Sep 15 01:54:44 2003 GMT  Holger Bochnig <hbgg@gmx.net>

	fixing some 2D board problems, moving board dimensions to
	defines in boarddim.h

	* export.c, gtkboard.c, gtkexport.c, gtkprefs.c, htmlimages.c,
	render.c, render.h, set.c, show.c, xboard.c, xgame.c:
	update of dynamic point labels on the bottom should work now,
	some fixes to export of HTML images
	
	* boarddim.h: new file
	* Makefile.am: add boarddim.h

Sat Sep 13 22:32:01 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* play.c (NewGame): Fixed reroll conditional.
